--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -14,6 +14,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.11'
+    - name: streamlit
+      run: |
+        pip install streamlit
+    - name: yfinance
+      run: |
+        pip install yfinance
     - name: Add conda to system path
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
@@ -32,3 +38,9 @@ jobs:
       run: |
         conda install pytest
         pytest
+    - name: streamlit
+      run: |
+        conda install streamlit
+    - name: yfinance
+      run: |
+        pip install yfinance
